--- a/js/ex01/src/style.css
+++ b/js/ex01/src/style.css
@@ -1,6 +1,6 @@
 /* Set some variables and base styles */
 :root {
-  --dark: #464b63;
+  --dark: #011C27;
   --light: #dedede;
   font-size: 16px;
   font-family: sans-serif;
@@ -27,7 +27,7 @@ html {
   margin: 0 auto;
 }
 
-.container > * + * {
+.container>*+* {
   margin-top: 1em;
 }
 
